header, fist row addapted

--- a/index.html
+++ b/index.html
@@ -7,26 +7,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/8a59caefec.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
+
 <body>
   <div class="wrapper">
+    <header class="header">
+      <div class="header__wrap">
+        <div class="logo">
 
-    <div class="row__two">
-      <div class="main__row__two_left">
-        <h1 title="two__left_h1" id="fb-50">Как смотреть кино</h1>
-        <p title="two__left_p">За 8 занятий станем активными зрителями
-          и разберёмся в кинопроцессе</p>
+          <img src="./img/logo_mobile_black 1.png" title="logo" alt="">
+        </div>
+
       </div>
+    </header>
 
-      <div class="main__row__two_right">
-        <!-- <div class="producer__img"> -->
+    <main class="main">
 
-          <img class="producer__img" src="./img/Group 23-1.png" title="producer" alt="producer">
+      <div class="main__wrap">
 
-        <!-- </div> -->
+        <div class="row__one">
+          <i class="fa-solid fa-globe"></i>
+          <p title="row_one_p">онлайн-курс</p>
+          <i class="fa-regular fa-clock"></i>
+          <p title="row_one_p">18 Часов</p>
+          <i class="fa-solid fa-calendar-days"></i>
+          <p title="row_one_p">8 сентября</p>
+        </div>
+
+
+        <div class="row__two">
+          <div class="main__row__two_left">
+            <h1 title="two__left_h1" id="fb-50">Как смотреть кино</h1>
+            <p title="two__left_p">За 8 занятий станем активными зрителями
+              и разберёмся в кинопроцессе</p>
+          </div>
+
+          <div class="main__row__two_right">
+            <!-- <div class="producer__img"> -->
+
+            <img class="producer__img" src="./img/Group 23-1.png" title="producer" alt="producer">
+
+            <!-- </div> -->
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
   </div>
 </body>
 
