--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./style/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://kit.fontawesome.com/8a59caefec.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Document</title>
 </head>
 
@@ -17,7 +18,7 @@
       <div class="header__wrap">
         <div class="logo">
 
-          <img src="./img/logo_mobile_black 1.png" title="logo" alt="">
+          <img src="./img/logo_mobile_black 1.png" class="logo" alt="">
         </div>
 
       </div>
@@ -29,31 +30,345 @@
 
         <div class="row__one">
           <i class="fa-solid fa-globe"></i>
-          <p title="row_one_p">онлайн-курс</p>
+          <p class="row_one_p">онлайн-курс</p>
           <i class="fa-regular fa-clock"></i>
-          <p title="row_one_p">18 Часов</p>
+          <p class="row_one_p">18 Часов</p>
           <i class="fa-solid fa-calendar-days"></i>
-          <p title="row_one_p">8 сентября</p>
+          <p class="row_one_p">8 сентября</p>
         </div>
 
-
         <div class="row__two">
-          <div class="main__row__two_left">
-            <h1 title="two__left_h1" id="fb-50">Как смотреть кино</h1>
-            <p title="two__left_p">За 8 занятий станем активными зрителями
+
+          <div class="row__two__left_block">
+            <h1 class="two__left_h1" id="fb-50">Как смотреть кино</h1>
+            <p class="two__left_p">За 8 занятий станем активными зрителями
               и разберёмся в кинопроцессе</p>
           </div>
 
-          <div class="main__row__two_right">
-            <!-- <div class="producer__img"> -->
+          <div class="row__two__right_block img_style">
 
-            <img class="producer__img" src="./img/Group 23-1.png" title="producer" alt="producer">
+            <img class="producer__img" src="./img/Group 23-1.png" alt="producer_image">
 
-            <!-- </div> -->
           </div>
         </div>
+
+        <div class="row__three">
+
+          <!-- <img src="./img/Group 24.png" class="quote" alt=""> -->
+
+        </div>
+
+        <div class="row__four">
+
+
+          <div class="row__four__left_block">
+
+            <div class="row__four_title">
+              <h1 class="title">
+                О курсе
+              </h1>
+
+            </div>
+            <div class="row__four_paragraph">
+
+              <p class="text">
+                Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+                нет.
+                При этом без подготовки бывает трудно получить от просмотра удовольствие.
+              </p><br>
+              <p class="text">
+                На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                узнаем,
+                как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
+                рассмотрим
+                важнейшие картины, от «Гражданина Кейна» до «Матрицы».
+              </p>
+
+            </div>
+          </div>
+
+
+          <div class="row__four__right_block img_style" id="fb-50">
+
+
+            <img src="./img/Group 25.png" class="camera" alt="camera">
+
+          </div>
+
+        </div>
+
+        <div class="row__five">
+
+          <div class="row__five__left_block img_style">
+
+            <img class="footer_left__element_img" src="./img/Group 26.png" alt="camera1">
+
+          </div>
+
+
+          <div class="row__five__right_block tagline">
+
+            <div class="tag">
+              <h5 class="tag__title">8 занятий </h5>
+              <p class="tag__desc">
+                Для погружения
+                в кинематограф
+              </p>
+            </div>
+
+
+
+            <div class="tag">
+              <h5 class="tag__title">2 часа</h5>
+              <p class="tag__desc">
+                Длительность
+                каждого занятия
+              </p>
+            </div>
+
+            <div class="tag">
+              <h5 class="tag__title">3 недели</h5>
+              <p class="tag__desc">
+                Длительность
+                курса
+              </p>
+            </div>
+
+
+          </div>
+
+        </div>
+
+        <div class="row__six">
+
+          <div class="row__six_title">
+            <h1 class="title">Формат занятий</h1>
+          </div>
+
+          <div class="row__six__tags tagline">
+
+            <div class="tag">
+              <h5 class="tag__title">Вебинары</h5>
+              <p class="tag__desc">
+                Занятия проходят онлайн
+                в режиме вебинаров
+                с преподавателем
+              </p>
+            </div>
+
+            <div class="tag">
+              <h5 class="tag__title">Доступ навсегда</h5>
+              <p class="tag__desc">
+                Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
+              </p>
+            </div>
+
+            <div class="tag">
+              <h5 class="tag__title">Общение</h5>
+              <p class="tag__desc">
+                Вы можете задать вопрос
+                преподавателю на занятии
+              </p>
+            </div>
+
+
+          </div>
+
+        </div>
+
+        <div class="row__seven">
+          <div class="row__seven__title">
+            <h1 class="title">Что узнаем</h1>
+          </div>
+
+          <div class="feature_list">
+            <ul class="text">
+              <li>Кто чем занят в съёмочной группе;</li>
+              <li>На какие этапы делится кинопроизводство;</li>
+              <li>Как выглядит сценарий фильма и как он меняется
+                по ходу съёмок;</li>
+              <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить;</li>
+              <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы;</li>
+              <li>Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров;</li>
+              <li>Как, зная всё это, понимать, о чем фильм.</li>
+            </ul>
+          </div>
+
+        </div>
+
+        <div class="row__eight">
+          <div class="row__eight__title">
+            <h1 class="title">Программа курса</h1>
+          </div>
+
+
+          <div class="cards__wrap">
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 5.png" alt="oscar">
+              </div>
+              <div class="tag ">
+                <h5 class="tag__title tag__rules">1. Как создают кино</h5>
+                <p class="tag__desc tag__rules">8 сентября 20:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 7.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">2. Взгляд драматурга</h5>
+                <p class="tag__desc tag__rules">10 сентября 20:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+            <div class="course_cards ">
+              <div class="card">
+                <img src="./img/Rectangle 9.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">3. Взгляд режиссёра</h5>
+                <p class="tag__desc tag__rules">13 сентября 13:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 13.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">4. Взгляд монтажёра</h5>
+                <p class="tag__desc tag__rules">17 сентября 20:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 14.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">6. Язык кино. Семинар</h5>
+                <p class="tag__desc tag__rules">20 сентября 13:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 15.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">7. Взгляд кинокритика</h5>
+                <p class="tag__desc tag__rules">21 сентября 19:00
+                  Дмитрий Скворцов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 19.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">8. Осознанный зритель.
+                  Семинар</h5>
+                <p class="tag__desc tag__rules">22 сентября 19:00
+                  Дмитрий Скворцов</p>
+              </div>
+            </div>
+
+            <div class="course_cards">
+              <div class="card">
+                <img src="./img/Rectangle 20.png" alt="oscar">
+              </div>
+              <div class="tag">
+                <h5 class="tag__title tag__rules">1. Как создают кино</h5>
+                <p class="tag__desc tag__rules">8 сентября 20:00
+                  Данила Кузнецов</p>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="row__nine">
+          <div class="row__nine__title">
+            <h1 class="title">Курс прошло уже 1616 человек</h1>
+          </div>
+
+          <div class="user__card">
+            <div class="card__text">
+              <p class="text">
+                Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
+                лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
+                на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
+                режиссера, оператора, монтажера и т.д. Спасибо!
+              </p>
+            </div>
+            <div class="user__info">
+
+              <div class="user__img">
+                <img src="./img/1 9.png" alt="">
+              </div>
+
+              <div class="name__social">
+
+                <div class="user__name tag__title">
+                  <p class="name">Екатерина Палехова</p>
+                </div>
+
+                <div class="social">
+                  <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row__ten">
+          <div class="row_ten__title">
+            <h1 class="title">Начало курса — 8 сентября</h1>
+          </div>
+          <div class="course__info">
+            <p class="text">Стоимость</p>
+            <h1 class="price">3900 руб</h1>
+          </div>
+          <div class="additional__info">
+            <div class="user__level">
+
+            </div>
+            <div class="suggestion">
+
+              <div class="tag_size">
+                <h5 class="tag__title ">Для любого уровня</h5>
+                <p class="tag__desc ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся
+                  знания.</p>
+              </div>
+
+              <div class="tag_size">
+                <h5 class="tag__title ">Проходите сейчас</h5>
+                <p class="tag__desc ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
+                </p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+
       </div>
     </main>
+
+    <footer>
+      
+    </footer>
   </div>
 </body>
 
