edited and sorted class name

--- a/index.html
+++ b/index.html
@@ -28,55 +28,55 @@
 
       <div class="main__wrap">
 
-        <div class="row__one">
+        <div class="section__one">
           <i class="fa-solid fa-globe"></i>
-          <p class="row_one_p">онлайн-курс</p>
+          <p class="short__desc text__medium">онлайн-курс</p>
           <i class="fa-regular fa-clock"></i>
-          <p class="row_one_p">18 Часов</p>
+          <p class="short__desc text__medium">18 Часов</p>
           <i class="fa-solid fa-calendar-days"></i>
-          <p class="row_one_p">8 сентября</p>
+          <p class="short__desc text__medium">8 сентября</p>
         </div>
 
-        <div class="row__two">
+        <div class="section__two disp_space_btw ">
 
-          <div class="row__two__left_block">
-            <h1 class="two__left_h1" id="fb-50">Как смотреть кино</h1>
-            <p class="two__left_p">За 8 занятий станем активными зрителями
+          <div class="section__two__left_block">
+            <h1 class="title__big">Как смотреть кино</h1>
+            <p class="text__medium">За 8 занятий станем активными зрителями
               и разберёмся в кинопроцессе</p>
           </div>
 
-          <div class="row__two__right_block img_style">
+          <div class="section__two__right_block img_style">
 
             <img class="producer__img" src="./img/Group 23-1.png" alt="producer_image">
 
           </div>
         </div>
 
-        <div class="row__three">
+        <div class="section__three">
 
           <!-- <img src="./img/Group 24.png" class="quote" alt=""> -->
 
         </div>
 
-        <div class="row__four">
+        <div class="section__four disp_space_btw ">
 
 
-          <div class="row__four__left_block">
+          <div class="section__four__left_block">
 
-            <div class="row__four_title">
-              <h1 class="title">
+            <div class="section__four_title">
+              <h1 class="title__medium">
                 О курсе
               </h1>
 
             </div>
-            <div class="row__four_paragraph">
+            <div class="section__four_desc">
 
-              <p class="text">
+              <p class="text__medium">
                 Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
                 нет.
                 При этом без подготовки бывает трудно получить от просмотра удовольствие.
               </p><br>
-              <p class="text">
+              <p class="text__medium">
                 На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
                 узнаем,
                 как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
@@ -88,7 +88,7 @@
           </div>
 
 
-          <div class="row__four__right_block img_style" id="fb-50">
+          <div class="section__four__right_block img_style">
 
 
             <img src="./img/Group 25.png" class="camera" alt="camera">
@@ -97,20 +97,20 @@
 
         </div>
 
-        <div class="row__five">
+        <div class="section__five disp_space_btw ">
 
-          <div class="row__five__left_block img_style">
+          <div class="section__five__left_block img_style">
 
             <img class="footer_left__element_img" src="./img/Group 26.png" alt="camera1">
 
           </div>
 
 
-          <div class="row__five__right_block tagline">
+          <div class="section__five__right_block one__line ">
 
-            <div class="tag">
-              <h5 class="tag__title">8 занятий </h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">8 занятий </h5>
+              <p class="text__small">
                 Для погружения
                 в кинематограф
               </p>
@@ -118,17 +118,17 @@
 
 
 
-            <div class="tag">
-              <h5 class="tag__title">2 часа</h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">2 часа</h5>
+              <p class="text__small">
                 Длительность
                 каждого занятия
               </p>
             </div>
 
-            <div class="tag">
-              <h5 class="tag__title">3 недели</h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">3 недели</h5>
+              <p class="text__small">
                 Длительность
                 курса
               </p>
@@ -139,33 +139,33 @@
 
         </div>
 
-        <div class="row__six">
+        <div class="section__six">
 
-          <div class="row__six_title">
-            <h1 class="title">Формат занятий</h1>
+          <div class="section__six_title">
+            <h1 class="title__medium">Формат занятий</h1>
           </div>
 
-          <div class="row__six__tags tagline">
+          <div class="section__six__row one__line ">
 
-            <div class="tag">
-              <h5 class="tag__title">Вебинары</h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">Вебинары</h5>
+              <p class="text__small">
                 Занятия проходят онлайн
                 в режиме вебинаров
                 с преподавателем
               </p>
             </div>
 
-            <div class="tag">
-              <h5 class="tag__title">Доступ навсегда</h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">Доступ навсегда</h5>
+              <p class="text__small">
                 Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
               </p>
             </div>
 
-            <div class="tag">
-              <h5 class="tag__title">Общение</h5>
-              <p class="tag__desc">
+            <div class="row">
+              <h5 class="title__small">Общение</h5>
+              <p class="text__small">
                 Вы можете задать вопрос
                 преподавателю на занятии
               </p>
@@ -176,13 +176,13 @@
 
         </div>
 
-        <div class="row__seven">
-          <div class="row__seven__title">
-            <h1 class="title">Что узнаем</h1>
+        <div class="section__seven">
+          <div class="section__seven__title">
+            <h1 class="title__medium">Что узнаем</h1>
           </div>
 
           <div class="feature_list">
-            <ul class="text">
+            <ul class="text__medium">
               <li>Кто чем занят в съёмочной группе;</li>
               <li>На какие этапы делится кинопроизводство;</li>
               <li>Как выглядит сценарий фильма и как он меняется
@@ -196,21 +196,21 @@
 
         </div>
 
-        <div class="row__eight">
-          <div class="row__eight__title">
-            <h1 class="title">Программа курса</h1>
+        <div class="section__eight">
+          <div class="section__eight__title">
+            <h1 class="title__medium">Программа курса</h1>
           </div>
 
 
           <div class="cards__wrap">
 
-            <div class="course_cards">
+            <div class="course_cards disp_direction_col">
               <div class="card">
                 <img src="./img/Rectangle 5.png" alt="oscar">
               </div>
-              <div class="tag ">
-                <h5 class="tag__title tag__rules">1. Как создают кино</h5>
-                <p class="tag__desc tag__rules">8 сентября 20:00
+              <div class="row">
+                <h5 class="title__small row__rules">1. Как создают кино</h5>
+                <p class="text__small row__rules">8 сентября 20:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -219,9 +219,9 @@
               <div class="card">
                 <img src="./img/Rectangle 7.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">2. Взгляд драматурга</h5>
-                <p class="tag__desc tag__rules">10 сентября 20:00
+              <div class="row">
+                <h5 class="title__small row__rules">2. Взгляд драматурга</h5>
+                <p class="text__small row__rules">10 сентября 20:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -230,9 +230,9 @@
               <div class="card">
                 <img src="./img/Rectangle 9.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">3. Взгляд режиссёра</h5>
-                <p class="tag__desc tag__rules">13 сентября 13:00
+              <div class="row">
+                <h5 class="title__small row__rules">3. Взгляд режиссёра</h5>
+                <p class="text__small row__rules">13 сентября 13:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -241,9 +241,9 @@
               <div class="card">
                 <img src="./img/Rectangle 13.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">4. Взгляд монтажёра</h5>
-                <p class="tag__desc tag__rules">17 сентября 20:00
+              <div class="row">
+                <h5 class="title__small row__rules">4. Взгляд монтажёра</h5>
+                <p class="text__small row__rules">17 сентября 20:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -252,9 +252,9 @@
               <div class="card">
                 <img src="./img/Rectangle 14.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">6. Язык кино. Семинар</h5>
-                <p class="tag__desc tag__rules">20 сентября 13:00
+              <div class="row">
+                <h5 class="title__small row__rules">6. Язык кино. Семинар</h5>
+                <p class="text__small row__rules">20 сентября 13:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -263,9 +263,9 @@
               <div class="card">
                 <img src="./img/Rectangle 15.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">7. Взгляд кинокритика</h5>
-                <p class="tag__desc tag__rules">21 сентября 19:00
+              <div class="row">
+                <h5 class="title__small row__rules">7. Взгляд кинокритика</h5>
+                <p class="text__small row__rules">21 сентября 19:00
                   Дмитрий Скворцов</p>
               </div>
             </div>
@@ -274,10 +274,10 @@
               <div class="card">
                 <img src="./img/Rectangle 19.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">8. Осознанный зритель.
+              <div class="row">
+                <h5 class="title__small row__rules">8. Осознанный зритель.
                   Семинар</h5>
-                <p class="tag__desc tag__rules">22 сентября 19:00
+                <p class="text__small row__rules">22 сентября 19:00
                   Дмитрий Скворцов</p>
               </div>
             </div>
@@ -286,9 +286,9 @@
               <div class="card">
                 <img src="./img/Rectangle 20.png" alt="oscar">
               </div>
-              <div class="tag">
-                <h5 class="tag__title tag__rules">1. Как создают кино</h5>
-                <p class="tag__desc tag__rules">8 сентября 20:00
+              <div class="row">
+                <h5 class="title__small row__rules">1. Как создают кино</h5>
+                <p class="text__small row__rules">8 сентября 20:00
                   Данила Кузнецов</p>
               </div>
             </div>
@@ -297,14 +297,14 @@
 
         </div>
 
-        <div class="row__nine">
-          <div class="row__nine__title">
-            <h1 class="title">Курс прошло уже 1616 человек</h1>
+        <div class="section__nine disp_direction_col">
+          <div class="section__nine__title">
+            <h1 class="title__medium">Курс прошло уже 1616 человек</h1>
           </div>
 
           <div class="user__card">
             <div class="card__text">
-              <p class="text">
+              <p class="text__medium">
                 Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
                 лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
                 на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
@@ -319,8 +319,8 @@
 
               <div class="name__social">
 
-                <div class="user__name tag__title">
-                  <p class="name">Екатерина Палехова</p>
+                <div class="user__name">
+                  <p class="text__big">Екатерина Палехова</p>
                 </div>
 
                 <div class="social">
@@ -332,12 +332,12 @@
           </div>
         </div>
 
-        <div class="row__ten">
-          <div class="row_ten__title">
-            <h1 class="title">Начало курса — 8 сентября</h1>
+        <div class="section__ten">
+          <div class="section_ten__title">
+            <h1 class="title__small">Начало курса — 8 сентября</h1>
           </div>
           <div class="course__info">
-            <p class="text">Стоимость</p>
+            <p class="text__medium">Стоимость</p>
             <h1 class="price">3900 руб</h1>
           </div>
           <div class="additional__info">
@@ -346,15 +346,15 @@
             </div>
             <div class="suggestion">
 
-              <div class="tag_size">
-                <h5 class="tag__title ">Для любого уровня</h5>
-                <p class="tag__desc ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся
+              <div class="row">
+                <h5 class="title__small ">Для любого уровня</h5>
+                <p class="text__small ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся
                   знания.</p>
               </div>
 
-              <div class="tag_size">
-                <h5 class="tag__title ">Проходите сейчас</h5>
-                <p class="tag__desc ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
+              <div class="row">
+                <h5 class="title__small ">Проходите сейчас</h5>
+                <p class="text__small ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
                 </p>
               </div>
 
@@ -367,7 +367,7 @@
     </main>
 
     <footer>
-      
+
     </footer>
   </div>
 </body>
