all done need to test

--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
 
           <div class="section__five__left_block img_style">
 
-            <img class="footer_left__element_img" src="./img/Group 26.png" alt="camera1">
+            <img class="camera2_img" src="./img/Group 26.png" alt="camera1">
 
           </div>
 
 
-          <div class="section__five__right_block one__line ">
+          <div class="section__five__right_block  one__line ">
 
-            <div class="row">
+            <div class="row rows_style">
               <h5 class="title__small">8 занятий </h5>
               <p class="text__small">
                 Для погружения
@@ -118,7 +118,7 @@
 
 
 
-            <div class="row">
+            <div class="row rows_style">
               <h5 class="title__small">2 часа</h5>
               <p class="text__small">
                 Длительность
@@ -126,7 +126,7 @@
               </p>
             </div>
 
-            <div class="row">
+            <div class="row rows_style add_rulle">
               <h5 class="title__small">3 недели</h5>
               <p class="text__small">
                 Длительность
@@ -282,7 +282,7 @@
               </div>
             </div>
 
-            <div class="course_cards">
+            <div class="course_cards last__card">
               <div class="card">
                 <img src="./img/Rectangle 20.png" alt="oscar">
               </div>
@@ -304,7 +304,7 @@
 
           <div class="user__card">
             <div class="card__text">
-              <p class="text__medium">
+              <p class="text__medium mob__version_text">
                 Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
                 лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
                 на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
@@ -334,11 +334,10 @@
 
         <div class="section__ten">
           <div class="section_ten__title">
-            <h1 class="title__small">Начало курса — 8 сентября</h1>
+            <h1 class="title__medium">Начало курса — <span class="title__medium"> 8 сентября</span></h1>
           </div>
           <div class="course__info">
-            <p class="text__medium">Стоимость</p>
-            <h1 class="price">3900 руб</h1>
+            <p class="text__medium">Стоимость <span class="price">3900 руб.</span></p>
           </div>
           <div class="additional__info">
             <div class="user__level">
@@ -346,14 +345,15 @@
             </div>
             <div class="suggestion">
 
-              <div class="row">
+              <div class="suggestion__row row aditi_marg">
                 <h5 class="title__small ">Для любого уровня</h5>
-                <p class="text__small ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить имеющиеся
+                <p class="text__small ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить
+                  имеющиеся
                   знания.</p>
               </div>
 
-              <div class="row">
-                <h5 class="title__small ">Проходите сейчас</h5>
+              <div class="suggestion__row row">
+                <h5 class="title__small">Проходите сейчас</h5>
                 <p class="text__small ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
                 </p>
               </div>
@@ -367,7 +367,56 @@
     </main>
 
     <footer>
+      <div class="footer__wrapper">
 
+
+
+        <div class="footer__left">
+          <div class="footer__logo">
+            <img src="./img/logo_mobile_white 1.png" alt="">
+          </div>
+
+
+          <div class="socials">
+            <i class="fa-brands fa-instagram fa-2xl"></i>
+            <i class="fa-brands fa-square-facebook fa-2xl"></i>
+            <i class="fa-brands fa-vk fa-2xl"></i>
+            <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+          </div>
+          <div class="copyright__one">
+            <p class="text__small ">
+
+              © Синхронизация, 2020
+            </p>
+          </div>
+        </div>
+
+
+        <div class="footer__right">
+
+
+          <div class="cont_number">
+            <i class="fa-duotone fa-phone"></i>
+
+            <p class="text__info">+7 (499) 39-146-39</p>
+          </div>
+
+
+          <div class="email">
+            <i class="fa-regular fa-envelope"></i>
+            <p class="text_info">hello@synchronize.ru</p>
+          </div>
+
+          <div class="copyright_two">
+            <p class="text__small ">
+
+              © Синхронизация, 2020
+            </p>
+          </div>
+
+        </div>
+
+      </div>
     </footer>
   </div>
 </body>
