test 2 adding some change

--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
 
 
           <div class="socials">
-            <i class="fa-brands fa-instagram fa-2xl"></i>
-            <i class="fa-brands fa-square-facebook fa-2xl"></i>
-            <i class="fa-brands fa-vk fa-2xl"></i>
-            <i class="fa-brands fa-square-whatsapp fa-2xl"></i>
+            <i class="fa-brands fa-instagram fa-2xl soc"></i>
+            <i class="fa-brands fa-square-facebook fa-2xl soc"></i>
+            <i class="fa-brands fa-vk fa-2xl soc"></i>
+            <i class="fa-brands fa-square-whatsapp fa-2xl soc"></i>
           </div>
           <div class="copyright__one">
             <p class="text__small ">
