--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <header class="header">
-      <div class="header__wrap">
+
+
+  <div class="main__wrap">
+
+    <header>
+
+      <div class="fix_wide__wrap">
+
         <div class="logo">
 
           <img src="./img/logo_mobile_black 1.png" class="logo" alt="">
         </div>
 
       </div>
+
     </header>
 
-    <main class="main">
+    <main>
 
-      <div class="main__wrap">
+      <div class="fix_wide__wrap">
 
         <div class="section__one">
           <i class="fa-solid fa-globe"></i>
@@ -54,7 +60,7 @@
 
         <div class="section__three">
 
-          <!-- <img src="./img/Group 24.png" class="quote" alt=""> -->
+          <img src="./img/Group 24.png" class="quote" alt="">
 
         </div>
 
@@ -196,6 +202,7 @@
 
         </div>
 
+
         <div class="section__eight">
           <div class="section__eight__title">
             <h1 class="title__medium">Программа курса</h1>
@@ -297,127 +304,149 @@
 
         </div>
 
-        <div class="section__nine disp_direction_col">
-          <div class="section__nine__title">
-            <h1 class="title__medium">Курс прошло уже 1616 человек</h1>
-          </div>
+      </div>
 
-          <div class="user__card">
-            <div class="card__text">
-              <p class="text__medium mob__version_text">
-                Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
-                лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
-                на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
-                режиссера, оператора, монтажера и т.д. Спасибо!
-              </p>
+      <div class="sectin__nine__main_wide">
+
+        <div class="fix_wide__wrap">
+
+
+          <div class="section__nine disp_direction_col">
+            <div class="section__nine__title">
+              <h1 class="title__medium">Курс прошло уже 1616 человек</h1>
             </div>
-            <div class="user__info">
 
-              <div class="user__img">
-                <img src="./img/1 9.png" alt="">
-              </div>
-
-              <div class="name__social">
-
-                <div class="user__name">
-                  <p class="text__big">Екатерина Палехова</p>
-                </div>
-
-                <div class="social">
-                  <i class="fa-brands fa-square-facebook fa-2xl"></i>
-                </div>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="section__ten">
-          <div class="section_ten__title">
-            <h1 class="title__medium">Начало курса — <span class="title__medium"> 8 сентября</span></h1>
-          </div>
-          <div class="course__info">
-            <p class="text__medium">Стоимость <span class="price">3900 руб.</span></p>
-          </div>
-          <div class="additional__info">
-            <div class="user__level">
-
-            </div>
-            <div class="suggestion">
-
-              <div class="suggestion__row row aditi_marg">
-                <h5 class="title__small ">Для любого уровня</h5>
-                <p class="text__small ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить
-                  имеющиеся
-                  знания.</p>
-              </div>
-
-              <div class="suggestion__row row">
-                <h5 class="title__small">Проходите сейчас</h5>
-                <p class="text__small ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном кабинете
+            <div class="user__card">
+              <div class="card__text">
+                <p class="text__medium mob__version_text">
+                  Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному
+                  изложению
+                  лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
+                  на практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
+                  режиссера, оператора, монтажера и т.д. Спасибо!
                 </p>
               </div>
+              <div class="user__info">
 
+                <div class="user__img">
+                  <img src="./img/1 9.png" alt="">
+                </div>
+
+                <div class="name__social">
+
+                  <div class="user__name">
+                    <p class="text__big">Екатерина Палехова</p>
+                  </div>
+
+                  <div class="social">
+                    <i class="fa-brands fa-square-facebook fa-2xl"></i>
+                  </div>
+
+                </div>
+              </div>
             </div>
           </div>
 
         </div>
 
       </div>
+
+      <div class="sectin__ten__main_wide">
+
+        <div class="fix_wide__wrap">
+
+          <div class="section__ten">
+            <div class="section_ten__title">
+              <h1 class="title__medium">Начало курса — <span class="title__medium"> 8 сентября</span></h1>
+            </div>
+            <div class="course__info">
+              <p class="text__medium">Стоимость <span class="price">3900 руб.</span></p>
+            </div>
+            <div class="additional__info">
+              <div class="user__level">
+
+              </div>
+              <div class="suggestion">
+
+                <div class="suggestion__row row aditi_marg">
+                  <h5 class="title__small ">Для любого уровня</h5>
+                  <p class="text__small ">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить
+                    имеющиеся
+                    знания.</p>
+                </div>
+
+                <div class="suggestion__row row">
+                  <h5 class="title__small">Проходите сейчас</h5>
+                  <p class="text__small ">Если вы не успели на вебинар, всегда можете посмотреть запись в личном
+                    кабинете
+                  </p>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
     </main>
 
     <footer>
-      <div class="footer__wrapper">
+
+      <div class="fix_wide__wrap">
+        
+        <div class="footer__wrapper">
+
+          <div class="footer__left">
+            <div class="footer__logo">
+              <img src="./img/logo_mobile_white 1.png" alt="">
+            </div>
 
 
+            <div class="socials">
+              <i class="fa-brands fa-instagram fa-2xl soc"></i>
+              <i class="fa-brands fa-square-facebook fa-2xl soc"></i>
+              <i class="fa-brands fa-vk fa-2xl soc"></i>
+              <i class="fa-brands fa-square-whatsapp fa-2xl soc"></i>
+            </div>
+            <div class="copyright__one">
+              <p class="text__small ">
 
-        <div class="footer__left">
-          <div class="footer__logo">
-            <img src="./img/logo_mobile_white 1.png" alt="">
+                © Синхронизация, 2020
+              </p>
+            </div>
           </div>
 
+          <div class="footer__right">
 
-          <div class="socials">
-            <i class="fa-brands fa-instagram fa-2xl soc"></i>
-            <i class="fa-brands fa-square-facebook fa-2xl soc"></i>
-            <i class="fa-brands fa-vk fa-2xl soc"></i>
-            <i class="fa-brands fa-square-whatsapp fa-2xl soc"></i>
-          </div>
-          <div class="copyright__one">
-            <p class="text__small ">
 
-              © Синхронизация, 2020
-            </p>
+            <div class="cont_number">
+              <i class="fa-duotone fa-phone"></i>
+
+              <p class="text__info">+7 (499) 39-146-39</p>
+            </div>
+
+
+            <div class="email">
+              <i class="fa-regular fa-envelope"></i>
+              <p class="text_info">hello@synchronize.ru</p>
+            </div>
+
+            <div class="copyright_two">
+              <p class="text__small ">
+
+                © Синхронизация, 2020
+              </p>
+            </div>
+
           </div>
+
         </div>
-
-
-        <div class="footer__right">
-
-
-          <div class="cont_number">
-            <i class="fa-duotone fa-phone"></i>
-
-            <p class="text__info">+7 (499) 39-146-39</p>
-          </div>
-
-
-          <div class="email">
-            <i class="fa-regular fa-envelope"></i>
-            <p class="text_info">hello@synchronize.ru</p>
-          </div>
-
-          <div class="copyright_two">
-            <p class="text__small ">
-
-              © Синхронизация, 2020
-            </p>
-          </div>
-
-        </div>
-
       </div>
+
     </footer>
+
   </div>
 </body>
 
