add Semantic logic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <header>
 
-      <div class="fix_wide__wrap">
+      <div class="fix_size_wide__wrap">
 
         <div class="logo">
 
@@ -32,7 +32,7 @@
 
     <main>
 
-      <div class="fix_wide__wrap">
+      <div class="fix_size_wide__wrap">
 
         <div class="section__one">
           <i class="fa-solid fa-globe"></i>
@@ -46,9 +46,14 @@
         <div class="section__two disp_space_btw ">
 
           <div class="section__two__left_block">
-            <h1 class="title__big">Как смотреть кино</h1>
-            <p class="text__medium">За 8 занятий станем активными зрителями
-              и разберёмся в кинопроцессе</p>
+            
+            <article>
+              <hgroup>
+                <h1 class="title__big">Как смотреть кино</h1>
+                <p class="text__medium">За 8 занятий станем активными зрителями
+                  и разберёмся в кинопроцессе</p>
+              </hgroup>
+            </article>
           </div>
 
           <div class="section__two__right_block img_style">
@@ -68,29 +73,35 @@
 
 
           <div class="section__four__left_block">
+            <article>
+              <header>
+                <div class="section__four_title">
+                  <h1 class="title__medium">
+                    О курсе
+                  </h1>
 
-            <div class="section__four_title">
-              <h1 class="title__medium">
-                О курсе
-              </h1>
+                </div>
+              </header>
+              <footer>
+                <div class="section__four_paragraph">
 
-            </div>
-            <div class="section__four_desc">
+                  <p class="text__medium">
+                    Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино
+                    —
+                    нет.
+                    При этом без подготовки бывает трудно получить от просмотра удовольствие.
+                  </p>
 
-              <p class="text__medium">
-                Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
-                нет.
-                При этом без подготовки бывает трудно получить от просмотра удовольствие.
-              </p><br>
-              <p class="text__medium">
-                На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
-                узнаем,
-                как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
-                рассмотрим
-                важнейшие картины, от «Гражданина Кейна» до «Матрицы».
-              </p>
-
-            </div>
+                  <p class="text__medium">
+                    На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                    узнаем,
+                    как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и
+                    рассмотрим
+                    важнейшие картины, от «Гражданина Кейна» до «Матрицы».
+                  </p>
+                </div>
+              </footer>
+            </article>
           </div>
 
 
@@ -115,29 +126,48 @@
           <div class="section__five__right_block  one__line ">
 
             <div class="row rows_style">
-              <h5 class="title__small">8 занятий </h5>
-              <p class="text__small">
-                Для погружения
-                в кинематограф
-              </p>
+              <article>
+                <header>
+                  <h5 class="title__small">8 занятий </h5>
+                </header>
+                <footer>
+                  <p class="text__small">
+                    Для погружения
+                    в кинематограф
+                  </p>
+                </footer>
+              </article>
             </div>
 
 
 
             <div class="row rows_style">
-              <h5 class="title__small">2 часа</h5>
-              <p class="text__small">
-                Длительность
-                каждого занятия
-              </p>
+              <article>
+                <header>
+                  <h5 class="title__small">2 часа</h5>
+                </header>
+                <footer>
+                  <p class="text__small">
+                    Длительность
+                    каждого занятия
+                  </p>
+                </footer>
+              </article>
             </div>
 
             <div class="row rows_style add_rulle">
-              <h5 class="title__small">3 недели</h5>
-              <p class="text__small">
-                Длительность
-                курса
-              </p>
+              <article>
+                <header>
+                  <h5 class="title__small">3 недели</h5>
+                </header>
+                <footer>
+                  <p class="text__small">
+                    Длительность
+                    курса
+                  </p>
+                </footer>
+
+              </article>
             </div>
 
 
@@ -306,9 +336,9 @@
 
       </div>
 
-      <div class="sectin__nine__main_wide">
+      <div class="section__nine__main_wide">
 
-        <div class="fix_wide__wrap">
+        <div class="fix_size_wide__wrap">
 
 
           <div class="section__nine disp_direction_col">
@@ -351,9 +381,9 @@
 
       </div>
 
-      <div class="sectin__ten__main_wide">
+      <div class="section__ten__main_wide">
 
-        <div class="fix_wide__wrap">
+        <div class="fix_size_wide__wrap">
 
           <div class="section__ten">
             <div class="section_ten__title">
@@ -393,58 +423,58 @@
     </main>
 
     <footer>
+      <div class="footer_main__wrap">
+        <div class="fix_size_wide__wrap">
 
-      <div class="fix_wide__wrap">
-        
-        <div class="footer__wrapper">
+          <div class="footer__wrapper">
 
-          <div class="footer__left">
-            <div class="footer__logo">
-              <img src="./img/logo_mobile_white 1.png" alt="">
+            <div class="footer__left">
+              <div class="footer__logo">
+                <img src="./img/logo_mobile_white 1.png" alt="">
+              </div>
+
+
+              <div class="socials">
+                <i class="fa-brands fa-instagram fa-2xl soc"></i>
+                <i class="fa-brands fa-square-facebook fa-2xl soc"></i>
+                <i class="fa-brands fa-vk fa-2xl soc"></i>
+                <i class="fa-brands fa-square-whatsapp fa-2xl soc"></i>
+              </div>
+              <div class="copyright__one">
+                <p class="text__small ">
+
+                  © Синхронизация, 2020
+                </p>
+              </div>
             </div>
 
+            <div class="footer__right">
 
-            <div class="socials">
-              <i class="fa-brands fa-instagram fa-2xl soc"></i>
-              <i class="fa-brands fa-square-facebook fa-2xl soc"></i>
-              <i class="fa-brands fa-vk fa-2xl soc"></i>
-              <i class="fa-brands fa-square-whatsapp fa-2xl soc"></i>
-            </div>
-            <div class="copyright__one">
-              <p class="text__small ">
 
-                © Синхронизация, 2020
-              </p>
+              <div class="cont_number">
+                <i class="fa-duotone fa-phone"></i>
+
+                <p class="text__info">+7 (499) 39-146-39</p>
+              </div>
+
+
+              <div class="email">
+                <i class="fa-regular fa-envelope"></i>
+                <p class="text_info">hello@synchronize.ru</p>
+              </div>
+
+              <div class="copyright_two">
+                <p class="text__small ">
+
+                  © Синхронизация, 2020
+                </p>
+              </div>
+
             </div>
+
           </div>
-
-          <div class="footer__right">
-
-
-            <div class="cont_number">
-              <i class="fa-duotone fa-phone"></i>
-
-              <p class="text__info">+7 (499) 39-146-39</p>
-            </div>
-
-
-            <div class="email">
-              <i class="fa-regular fa-envelope"></i>
-              <p class="text_info">hello@synchronize.ru</p>
-            </div>
-
-            <div class="copyright_two">
-              <p class="text__small ">
-
-                © Синхронизация, 2020
-              </p>
-            </div>
-
-          </div>
-
         </div>
       </div>
-
     </footer>
 
   </div>
